<resources>
    <string name="app_name">Quản Lý Bán Hàng</string>
    <string name="app_title">WeebPal</string>
    <string name="user_name">Tên</string>
    <string name="user_pass">Mật khẩu</string>
    <string name="user_login">Đăng nhập</string>
    <string name="quanly_hoadon">Quản lý hóa đơn</string>
    <string name="quanly_sanpham">Quản lý sản phẩm</string>
    <string name="quanly_loaisp">Quản lý loại sản phẩm</string>
    <string name="quanly_nhanhieu">Quản lý nhãn hiệu</string>
    <string name="quanly_khachhang">Quản lý khách hàng</string>
    <string name="quanly_nhomkh">Quản lý nhóm khách hàng</string>
    <string name="quanly_doanhthu">Xem doanh thu trong ngày</string>
    <string name="quanly_nhanvien">Quản lý nhân viên</string>
    <string name="quanly_them">Thêm</string>
    <string name="quanly_sua">Sửa</string>
    <string name="quanly_xoa">Xóa</string>
    <string name="quanly_luu">Lưu</string>
    <string name="chung_sanpham">Tên sản phẩm</string>
    <string name="chung_loaisp">Loại sản phẩm</string>
    <string name="chung_so_luong">Số lượng</string>
    <string name="hoadon_gia_ban">Giá bán</string>
    <string name="chung_giam_gia">Giảm giá</string>
    <string name="chung_khachhang">Tên khách hàng</string>
    <string name="chung_dia_chi">Địa chỉ khách hàng</string>
    <string name="chung_nhomkh">Nhóm khách hàng</string>
    <string name="hoadon_ten_nv">Nhân viên bán hàng</string>
    <string name="chung_ghi_chu">Ghi chú</string>
    <string name="chung_nhan_hieu">Nhãn hiệu</string>
    <string name="sanpham_gia_goc">Giá gốc</string>
    <string name="sanpham_gia_si">Giá sỉ</string>
    <string name="sanpham_gia_le">Giá lẻ</string>
    <string name="sanpham_gia_vip">Giá VIP</string>
    <string name="sanpham_image_url">Link hình ảnh</string>
    <string name="loaisp_mo_ta">Mô tả</string>
    <string name="khachhang_ten">Tên khách hàng</string>
    <string name="khachhang_gioi_tinh">Giới tính</string>
    <string name="khachhang_dien_thoai">Điện thoại</string>
    <string name="khachhang_email">Email</string>
    <string name="nhanvien_ten">Tên nhân viên</string>
    <string name="nhanvien_dia_chi">Địa chỉ nhân viên</string>
    <string name="nhanvien_cong_viec">Công việc</string>
    <string name="login_fail">Đăng nhập thất bại</string>
    <string name="loading_msg">Đang cập nhật dữ liệu từ server...</string>
    <string name="loading_msg_fail">Đang cập nhật dữ liệu từ server thất bại</string>
    <string name="login_name">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="quantity">Số lượng</string>
    <string name="activity_title_login">Đăng nhập</string>
    <string name="activity_title_home">Quản lý</string>
    <string name="activity_title_ds_doanhthu">Danh sách doanh thu</string>
    <string name="activity_title_ds_hoadon">Danh sách hóa đơn</string>
    <string name="activity_title_ds_khachhang">Danh sách khách hàng</string>
    <string name="activity_title_ds_loaisp">Danh sách loại sản phẩm</string>
    <string name="activity_title_ds_nhanhieu">Danh sách nhãn hiệu</string>
    <string name="activity_title_ds_nhanvien">Danh sách nhân viên</string>
    <string name="activity_title_ds_nhomkh">Danh sách nhóm khách hàng</string>
    <string name="activity_title_ds_sanpham">Danh sách sản phẩm</string>
    <string name="activity_title_ct_doanhthu">Chi tiết doanh thu</string>
    <string name="activity_title_ct_hoadon">Chi tiết hóa đơn</string>
    <string name="activity_title_ct_khachhang">Chi tiết khách hàng</string>
    <string name="activity_title_ct_loaisp">Chi tiết loại sản phẩm</string>
    <string name="activity_title_ct_nhanhieu">Chi tiết nhãn hiệu</string>
    <string name="activity_title_ct_nhanvien">Chi tiết nhân viên</string>
    <string name="activity_title_ct_nhomkh">Chi tiết nhóm khách hàng</string>
    <string name="activity_title_ct_sanpham">Chi tiết sản phẩm</string>
    <string name="doanh_thu_homnay">Doanh thu hôm nay</string>
    <string name="chung_gia">Giá</string>
    <string name="chung_tien">VNĐ</string>
</resources>
