<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/btn_ql_hoadon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/quanly_margin"
        android:onClick="SelectFeature"
        android:text="@string/quanly_hoadon" />

    <Button
        android:id="@+id/btn_ql_sanpham"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/quanly_margin"
        android:onClick="SelectFeature"
        android:text="@string/quanly_sanpham" />

    <Button
        android:id="@+id/btn_ql_loaisp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/quanly_margin"
        android:onClick="SelectFeature"
        android:text="@string/quanly_loaisp" />

    <Button
        android:id="@+id/btn_ql_nhanhieu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/quanly_margin"
        android:onClick="SelectFeature"
        android:text="@string/quanly_nhanhieu" />

    <Button
        android:id="@+id/btn_ql_khachang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/quanly_margin"
        android:onClick="SelectFeature"
        android:text="@string/quanly_khachhang" />

    <Button
        android:id="@+id/btn_ql_nhomkh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/quanly_margin"
        android:onClick="SelectFeature"
        android:text="@string/quanly_nhomkh" />

    <Button
        android:id="@+id/btn_ql_doanhthu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/quanly_margin"
        android:onClick="SelectFeature"
        android:text="@string/quanly_doanhthu" />

    <Button
        android:id="@+id/btn_ql_nhanvien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/quanly_margin"
        android:onClick="SelectFeature"
        android:text="@string/quanly_nhanvien" />
</LinearLayout>
