<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SanPhamActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/textviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chung_sanpham"
            android:textSize="@dimen/label_size" />

        <EditText
            android:id="@+id/ed_sanpham"
            style="@style/edittextRoundConnerWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/textviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chung_loaisp"
            android:textSize="@dimen/label_size" />

        <Spinner
            android:id="@+id/spn_loaisp"
            style="@style/spinnerRoundConnerWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/textviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chung_nhan_hieu"
            android:textSize="@dimen/label_size" />

        <Spinner
            android:id="@+id/spn_hieu"
            style="@style/spinnerRoundConnerWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/textviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chung_so_luong"
            android:textSize="@dimen/label_size" />

        <EditText
            android:id="@+id/ed_so_luong"
            style="@style/edittextRoundConnerWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/quanly_margin"
            android:inputType="number" />

        <TextView
            style="@style/textviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sanpham_gia_goc"
            android:textSize="@dimen/label_size" />

        <EditText
            android:id="@+id/ed_gia_goc"
            style="@style/edittextRoundConnerWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/quanly_margin"
            android:inputType="number" />

        <TextView
            style="@style/textviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sanpham_gia_vip"
            android:textSize="@dimen/label_size" />

        <EditText
            android:id="@+id/ed_gia_vip"
            style="@style/edittextRoundConnerWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/quanly_margin"
            android:inputType="number" />

        <TextView
            style="@style/textviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sanpham_gia_si"
            android:textSize="@dimen/label_size" />

        <EditText
            android:id="@+id/ed_gia_si"
            style="@style/edittextRoundConnerWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/quanly_margin"
            android:inputType="number" />

        <TextView
            style="@style/textviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sanpham_gia_le"
            android:textSize="@dimen/label_size" />

        <EditText
            android:id="@+id/ed_gia_le"
            style="@style/edittextRoundConnerWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/quanly_margin"
            android:inputType="number" />

        <TextView
            style="@style/textviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sanpham_image_url"
            android:textSize="@dimen/label_size" />

        <EditText
            android:id="@+id/ed_image_url"
            style="@style/edittextRoundConnerWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/quanly_margin"
            android:inputType="textUri" />

        <Button
            style="@style/buttonRoundConnerStrongBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Save"
            android:text="@string/quanly_luu" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/buttonRoundConnerStrongBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Delete"
            android:text="@string/quanly_xoa" />
    </LinearLayout>
</ScrollView>