<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HoaDonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/textviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chung_sanpham"
            android:textSize="@dimen/label_size" />

        <Spinner
            android:id="@+id/spn_sanpham"
            style="@style/spinnerRoundConnerWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textviewLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chung_so_luong"
                android:textSize="@dimen/label_size" />

            <EditText
                android:id="@+id/ed_so_luong"
                style="@style/edittextRoundConnerWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/quanly_margin"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            style="@style/textviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hoadon_gia_ban"
            android:textSize="@dimen/label_size" />

        <Spinner
            android:id="@+id/spn_gia_ban"
            style="@style/spinnerRoundConnerWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textviewLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chung_giam_gia"
                android:textSize="@dimen/label_size" />

            <EditText
                android:id="@+id/ed_giam_gia"
                style="@style/edittextRoundConnerWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/quanly_margin"
                android:inputType="number" />
        </LinearLayout>


        <TextView
            style="@style/textviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chung_khachhang"
            android:textSize="@dimen/label_size" />

        <Spinner
            android:id="@+id/ed_khachhang"
            style="@style/spinnerRoundConnerWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/textviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hoadon_ten_nv"
            android:textSize="@dimen/label_size" />

        <Spinner
            android:id="@+id/spn_ten_nv"
            style="@style/spinnerRoundConnerWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/textviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chung_ghi_chu"
            android:textSize="@dimen/label_size" />

        <EditText
            android:id="@+id/ed_ghi_chu"
            style="@style/edittextRoundConnerWhite.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

        <Button
            style="@style/buttonRoundConnerStrongBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Save"
            android:text="@string/quanly_luu" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/buttonRoundConnerStrongBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Delete"
            android:text="@string/quanly_xoa" />
    </LinearLayout>
</ScrollView>