<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".KhachHangActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/textviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/khachhang_ten"
            android:textSize="@dimen/label_size" />

        <EditText
            android:id="@+id/ed_khachhang"
            style="@style/edittextRoundConnerWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                style="@style/textviewLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/quanly_margin"
                android:layout_marginRight="@dimen/quanly_margin"
                android:text="@string/khachhang_gioi_tinh"
                android:textSize="@dimen/label_size" />

            <RadioGroup
                android:id="@+id/rdg_gioi_tinh"
                style="@style/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/quanly_margin"
                android:layout_marginLeft="@dimen/quanly_margin"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdb_nam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="Nam" />

                <RadioButton
                    android:id="@+id/rdb_nu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nữ" />
            </RadioGroup>

        </LinearLayout>

        <TextView
            style="@style/textviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chung_dia_chi"
            android:textSize="@dimen/label_size" />

        <EditText
            android:id="@+id/ed_dia_chi"
            style="@style/edittextRoundConnerWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/textviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/khachhang_dien_thoai"
            android:textSize="@dimen/label_size" />

        <EditText
            android:id="@+id/ed_dien_thoai"
            style="@style/edittextRoundConnerWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />

        <TextView
            style="@style/textviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/khachhang_email"
            android:textSize="@dimen/label_size" />

        <EditText
            android:id="@+id/ed_email"
            style="@style/edittextRoundConnerWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/textviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chung_nhomkh"
            android:textSize="@dimen/label_size" />

        <Spinner
            android:id="@+id/spn_nhomkh"
            style="@style/spinnerRoundConnerWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/textviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chung_ghi_chu"
            android:textSize="@dimen/label_size" />

        <EditText
            android:id="@+id/ed_ghi_chu"
            style="@style/edittextRoundConnerWhite.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Save"
            android:text="@string/quanly_luu" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Delete"
            android:text="@string/quanly_xoa" />
    </LinearLayout>
</ScrollView>