<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/app_title"
        android:textSize="50dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".LoginActivity">

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/ed_user_name"
            android:layout_alignParentLeft="true"
            android:text="@string/user_name"
            android:textSize="@dimen/label_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ed_user_pass"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/ed_user_pass"
            android:textSize="@dimen/input_text_size" />

        <TextView
            android:id="@+id/tv_user_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/ed_user_pass"
            android:layout_alignParentLeft="true"
            android:text="@string/user_pass"
            android:textSize="@dimen/label_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_user_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/ed_user_name"
            android:layout_toRightOf="@id/tv_user_pass"
            android:textSize="@dimen/input_text_size" />
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Login"
        android:text="@string/user_login" />
</LinearLayout>
